[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/inventory.png" type="Texture" id=1]
[ext_resource path="res://misc/loottable2.gd" type="Script" id=2]
[ext_resource path="res://inventory/inventory/lootcan.tscn" type="PackedScene" id=3]

[node name="loottable" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.2, 0.156863, 0.156863, 1 )
position = Vector2( -9.535, 66.1789 )
scale = Vector2( 6.01288, 4.79907 )
texture = ExtResource( 1 )

[node name="Position2D1" type="Position2D" parent="Sprite"]
position = Vector2( -49.8998, -48.1418 )

[node name="Position2D2" type="Position2D" parent="Sprite"]
position = Vector2( -28.9387, -47.7949 )

[node name="Position2D3" type="Position2D" parent="Sprite"]
position = Vector2( -8.66489, -48.8356 )

[node name="Position2D4" type="Position2D" parent="Sprite"]
position = Vector2( 12.468, -47.448 )

[node name="Position2D5" type="Position2D" parent="Sprite"]
position = Vector2( 32.2264, -47.1011 )

[node name="Position2D6" type="Position2D" parent="Sprite"]
position = Vector2( 52.1566, -47.7949 )

[node name="Position2D7" type="Position2D" parent="Sprite"]
position = Vector2( -49.5562, -20.0442 )

[node name="Position2D8" type="Position2D" parent="Sprite"]
position = Vector2( -28.5951, -19.6974 )

[node name="Position2D9" type="Position2D" parent="Sprite"]
position = Vector2( -8.14946, -19.6974 )

[node name="Position2D10" type="Position2D" parent="Sprite"]
position = Vector2( 12.8116, -19.3505 )

[node name="Position2D11" type="Position2D" parent="Sprite"]
position = Vector2( 32.57, -19.0036 )

[node name="Position2D12" type="Position2D" parent="Sprite"]
position = Vector2( 52.5002, -19.6974 )

[node name="Position2D13" type="Position2D" parent="Sprite"]
position = Vector2( -58.5105, -48.2018 )

[node name="Position2D14" type="Position2D" parent="Sprite"]
position = Vector2( -38.3885, -47.5045 )

[node name="Position2D15" type="Position2D" parent="Sprite"]
position = Vector2( -18.1147, -48.5452 )

[node name="Position2D16" type="Position2D" parent="Sprite"]
position = Vector2( 3.01823, -47.1576 )

[node name="Position2D17" type="Position2D" parent="Sprite"]
position = Vector2( 22.7766, -46.8107 )

[node name="Position2D18" type="Position2D" parent="Sprite"]
position = Vector2( 42.7068, -47.5045 )

[node name="Position2D19" type="Position2D" parent="Sprite"]
position = Vector2( -58.1669, -19.929 )

[node name="Position2D20" type="Position2D" parent="Sprite"]
position = Vector2( -38.0449, -19.407 )

[node name="Position2D21" type="Position2D" parent="Sprite"]
position = Vector2( -17.5992, -19.407 )

[node name="Position2D22" type="Position2D" parent="Sprite"]
position = Vector2( 3.36183, -19.0601 )

[node name="Position2D23" type="Position2D" parent="Sprite"]
position = Vector2( 23.1202, -18.7132 )

[node name="Position2D24" type="Position2D" parent="Sprite"]
position = Vector2( 43.0504, -19.407 )

[node name="lootcan" parent="." instance=ExtResource( 3 )]
position = Vector2( -4.84558, 161.104 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -9.97974, -0.0196991 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 400.621
margin_top = -136.854
margin_right = 494.621
margin_bottom = -38.8542
text = "inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 247.212
margin_top = 127.664
margin_right = 341.212
margin_bottom = 225.663
text = "next room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
